--- a/estilos.css
+++ b/estilos.css
@@ -1,4 +1,4 @@
-/* * {
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -8,7 +8,7 @@ body {
   font-family: "Segoe UI", sans-serif;
   line-height: 1.6;
   background-color: rgb(245, 245, 245);
-  color: #333;
+  color: rgb(51, 51, 51);
   height: 100vh;
   display: flex;
   flex-direction: column;
@@ -22,7 +22,7 @@ body {
 }
 
 .nav a {
-  color: #fff;
+  color: rgb(255, 255, 255);
   margin: 0 15px;
   text-decoration: none;
   font-weight: bold;
@@ -31,6 +31,7 @@ body {
 .mensaje-bienvenida {
   text-align: center;
 }
+
 .grid-productos {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
@@ -38,31 +39,30 @@ body {
   padding: 2rem;
   flex-grow: 1;
 }
+
 .productos {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   margin: 40px;
   gap: 12px;
 }
+
 .producto {
   display: flex;
   flex-direction: column;
-  background: #ded9d9;
-  border: 1px solid #ccc;
+  background: rgb(222, 217, 217);
+  border: 1px solid rgb(204, 204, 204);
   padding: 1rem;
   height: max-content;
   text-align: center;
   border-radius: 10px;
   transition: transform 0.3s ease;
 }
-
 .producto:hover {
   transform: scale(1.05);
 }
-
 .producto img {
   max-width: 100%;
-
   border-radius: 8px;
   margin: 15px;
 }
@@ -71,7 +71,7 @@ body {
   max-width: 600px;
   margin: 2rem auto;
   padding: 2rem;
-  background: #fff;
+  background: rgb(255, 255, 255);
   border-radius: 10px;
   display: flex;
   flex-direction: column;
@@ -82,16 +82,17 @@ form textarea {
   width: 100%;
   margin-bottom: 1rem;
   padding: 0.75rem;
-  border: 1px solid #ccc;
+  border: 1px solid rgb(204, 204, 204);
   border-radius: 5px;
 }
+
 h2 {
   text-align: center;
 }
 
 .btn-form {
-  background-color: #222;
-  color: #fff;
+  background-color: rgb(34, 34, 34);
+  color: rgb(255, 255, 255);
   padding: 0.75rem 2rem;
   border: none;
   border-radius: 5px;
@@ -99,8 +100,8 @@ h2 {
 }
 
 .footer {
-  background-color: #222;
-  color: #fff;
+  background-color: rgb(34, 34, 34);
+  color: rgb(255, 255, 255);
   text-align: center;
   padding: 1rem;
   margin-top: 2rem;
@@ -121,4 +122,6 @@ h2 {
   .productos {
     grid-template-columns: repeat(1, 1fr);
   }
-} */
+}
+
+/*# sourceMappingURL=estilos.css.map */
